[bdist_wheel]
universal = 1

[metadata]
name = foreman-manager
version = attr: minecraft_manager.__version__
url = https://pilgrimagesoftware.com
project_urls =
    Documentation = https://schifferers.github.io/Schifferers/foreman-manager
license = MIT
author = Paul Schifferer
author_email = paul@schifferers.net
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
package_dir = = src
include_package_data = true
python_required = >= 3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    foreman-manager = minecraft_manager.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    minecraft_manager
    tests

[coverage:paths]
source =
    src
    */site-packages

[semantic_release]
version_variable = src/minecraft_manager/__init__.py:__version__
branch = develop
upload_to_pypi = False
